--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/mid_size_margin"
-        android:text="@string/app_name"
+        android:paddingLeft="@dimen/mid_size_margin"
+        android:paddingRight="@dimen/mid_size_margin"
+        android:text="Welcome to the study room for nurses"
         android:textSize="@dimen/title_case"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
