--- a/app/src/main/res/menu/signout_menu.xml
+++ b/app/src/main/res/menu/signout_menu.xml
@@ -5,4 +5,10 @@
     <item
         android:id="@+id/sign_out_menu"
         android:title="@string/signout" />
+
+    <item android:title="@string/add_section"
+        android:id="@+id/add_section"/>
+
+    <item android:title="@string/add_lecture"
+        android:id="@+id/add_lecture"/>
 </menu>
