--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <corners android:radius="@dimen/avatar_radius" />
-    <solid android:color="@color/nurseGreen" />
+    <solid android:color="@color/title_bkg" />
     <size android:height="@dimen/avatar_size"
         android:width="@dimen/avatar_size" />
 
