--- a/app/src/main/res/layout/activity_nurse_room.xml
+++ b/app/src/main/res/layout/activity_nurse_room.xml
@@ -31,6 +31,7 @@
         android:textAlignment="center"
         android:textColor="@color/browser_actions_bg_grey"
         android:textSize="@dimen/title_case"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -61,4 +62,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@mipmap/plus" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/refreshFoatBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/title_bkg"
+        android:clickable="true"
+        android:visibility="invisible"
+        app:backgroundTint="@color/title_bkg"
+        app:layout_constraintBottom_toTopOf="@+id/addSectionBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@mipmap/synchronize" />
 </android.support.constraint.ConstraintLayout>
