--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -10,8 +10,6 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:background="@color/title_bkg"
         android:paddingTop="@dimen/title_pad"
         android:paddingBottom="@dimen/title_pad"
@@ -19,6 +17,7 @@
         android:textAlignment="center"
         android:textColor="@color/browser_actions_bg_grey"
         android:textSize="@dimen/title_case"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
