--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -75,7 +75,8 @@
         android:text="@string/userProfile"
         android:textAlignment="center"
         android:textColor="@color/browser_actions_bg_grey"
-        android:textSize="@dimen/intro_case"
+        android:textSize="@dimen/title_case"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
