--- a/app/src/main/res/menu/section_options.xml
+++ b/app/src/main/res/menu/section_options.xml
@@ -3,6 +3,11 @@
     <item
         android:id="@+id/create_lecture_menu"
         android:title="@string/create_lec" />
+
+    <item
+        android:id="@+id/create_question_menu"
+        android:title="@string/create_que" />
+
     <item
         android:id="@+id/edit_section_menu"
         android:title="@string/edit_section" />
