--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -46,7 +46,7 @@
         android:layout_marginBottom="8dp"
         android:ems="10"
         android:gravity="top"
-        android:hint="Feedback"
+        android:hint="Feedback: what features do you want added or taken off.."
         android:inputType="textMultiLine"
         android:textAlignment="textStart"
         app:layout_constraintBottom_toTopOf="@+id/feedback_submit"
