--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,191 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/container_padding"
-    tools:context=".WelcomeActivity">
+    android:layout_height="match_parent">
 
-    <!--<TextView-->
-    <!--android:id="@+id/welcome_textview"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginTop="@dimen/mid_size_margin"-->
-    <!--android:text="@string/userProfile"-->
-    <!--android:textSize="@dimen/title_case"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent" />-->
-
-    <!--<Button-->
-    <!--android:id="@+id/nrButton"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="@android:dimen/app_icon_size"-->
-    <!--android:text="@string/nurse_room"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/welcome_textview" />-->
-
-    <!--<Button-->
-    <!--android:id="@+id/highscoreBtn"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="@dimen/mid_size_margin"-->
-    <!--android:text="@string/highscore"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/nrButton" />-->
-
-    <!--<Button-->
-    <!--android:id="@+id/feedbackBtn"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="@dimen/mid_size_margin"-->
-    <!--android:text="@string/feedback"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/highscoreBtn" />-->
-
-    <!--<Button-->
-    <!--android:id="@+id/aboutBtn"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="@dimen/mid_size_margin"-->
-    <!--android:text="@string/about"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toBottomOf="@+id/feedbackBtn" />-->
-    <TextView
-        android:id="@+id/welcome_textview"
-        android:layout_width="0dp"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/title_bkg"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="@string/userProfile"
-        android:textAlignment="center"
-        android:textColor="@color/browser_actions_bg_grey"
-        android:textSize="@dimen/title_case"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:context=".WelcomeActivity">
 
-    <FrameLayout
-        android:id="@+id/nurse_avatar"
-        android:layout_width="@dimen/avatar_size"
-        android:layout_height="@dimen/avatar_size"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/welcome_textview">
 
         <TextView
-            android:id="@+id/name_avatar_textview"
-            android:layout_width="@dimen/avatar_size"
-            android:layout_height="@dimen/avatar_size"
-            android:background="@drawable/circle"
-            android:gravity="center"
+            android:id="@+id/welcome_textview"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@color/title_bkg"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="@string/userProfile"
+            android:textAlignment="center"
             android:textColor="@color/browser_actions_bg_grey"
-            android:textSize="40sp" />
+            android:textSize="@dimen/title_case"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/profile_image"
+        <FrameLayout
+            android:id="@+id/nurse_avatar"
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="2dp" />
-    </FrameLayout>
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/welcome_textview">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="@dimen/action_btn"
-        android:layout_height="@dimen/action_btn"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nurse_avatar">
+            <TextView
+                android:id="@+id/name_avatar_textview"
+                android:layout_width="@dimen/avatar_size"
+                android:layout_height="@dimen/avatar_size"
+                android:background="@drawable/circle"
+                android:gravity="center"
+                android:textColor="@color/browser_actions_bg_grey"
+                android:textSize="40sp" />
 
-        <Button
-            android:id="@+id/studyBtn"
-            android:layout_width="@dimen/action_btn"
-            android:layout_height="110dp"
-            android:background="@drawable/common_full_open_on_phone"
-            android:drawableTop="@mipmap/study_icon_large"
-            android:paddingTop="@dimen/btn_padding_top"
-            android:text="@string/Studies"
-            android:textColor="@color/colorPrimary" />
-    </android.support.v7.widget.CardView>
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/profile_image"
+                android:layout_width="@dimen/avatar_size"
+                android:layout_height="@dimen/avatar_size"
+                app:civ_border_color="#FF000000"
+                app:civ_border_width="2dp" />
+        </FrameLayout>
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="@dimen/action_btn"
-        android:layout_height="@dimen/action_btn"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nurse_avatar">
-
-        <Button
-            android:id="@+id/button7"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
-            android:background="@drawable/common_full_open_on_phone"
-            android:drawableTop="@mipmap/score_card_icon"
-            android:paddingTop="@dimen/btn_padding_top"
-            android:text="@string/Highscore"
-            android:textColor="@color/colorPrimary" />
-    </android.support.v7.widget.CardView>
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="8dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintEnd_toStartOf="@+id/cardView2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nurse_avatar">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="@dimen/action_btn"
-        android:layout_height="@dimen/action_btn"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView">
+            <Button
+                android:id="@+id/studyBtn"
+                android:layout_width="@dimen/action_btn"
+                android:layout_height="110dp"
+                android:background="@drawable/common_full_open_on_phone"
+                android:drawableTop="@mipmap/study_icon_large"
+                android:paddingTop="@dimen/btn_padding_top"
+                android:text="@string/Studies"
+                android:textColor="@color/colorPrimary" />
+        </android.support.v7.widget.CardView>
 
-        <Button
-            android:id="@+id/fback_btn"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView2"
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
-            android:background="@drawable/common_full_open_on_phone"
-            android:clickable="false"
-            android:drawableTop="@mipmap/feedback_96"
-            android:paddingTop="@dimen/btn_padding_top"
-            android:text="@string/Feedback"
-            android:textColor="@color/colorPrimary" />
-    </android.support.v7.widget.CardView>
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="32dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@+id/nurse_avatar">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="@dimen/action_btn"
-        android:layout_height="@dimen/action_btn"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="60dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="@dimen/action_btn"
+                android:layout_height="@dimen/action_btn"
+                android:background="@drawable/common_full_open_on_phone"
+                android:drawableTop="@mipmap/score_card_icon"
+                android:paddingTop="@dimen/btn_padding_top"
+                android:text="@string/Highscore"
+                android:textColor="@color/colorPrimary" />
+        </android.support.v7.widget.CardView>
 
-        <Button
-            android:id="@+id/aboutBtn"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView4"
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
-            android:background="@drawable/common_full_open_on_phone"
-            android:drawableTop="@mipmap/person_female_96"
-            android:paddingTop="@dimen/btn_padding_top"
-            android:text="@string/About"
-            android:textColor="@color/colorPrimary" />
-    </android.support.v7.widget.CardView>
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/cardView3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardView">
 
-</android.support.constraint.ConstraintLayout>
+            <Button
+                android:id="@+id/fback_btn"
+                android:layout_width="@dimen/action_btn"
+                android:layout_height="@dimen/action_btn"
+                android:background="@drawable/common_full_open_on_phone"
+                android:clickable="false"
+                android:drawableTop="@mipmap/feedback_96"
+                android:paddingTop="@dimen/btn_padding_top"
+                android:text="@string/Feedback"
+                android:textColor="@color/colorPrimary" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardView3"
+            android:layout_width="@dimen/action_btn"
+            android:layout_height="@dimen/action_btn"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            app:cardCornerRadius="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/cardView4"
+            app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
+            <Button
+                android:id="@+id/aboutBtn"
+                android:layout_width="@dimen/action_btn"
+                android:layout_height="@dimen/action_btn"
+                android:background="@drawable/common_full_open_on_phone"
+                android:drawableTop="@mipmap/person_female_96"
+                android:paddingTop="@dimen/btn_padding_top"
+                android:text="@string/About"
+                android:textColor="@color/colorPrimary" />
+        </android.support.v7.widget.CardView>
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
     <!--android:src="@drawable/profile"-->
