--- a/app/src/main/res/layout/fragment_objective.xml
+++ b/app/src/main/res/layout/fragment_objective.xml
@@ -3,7 +3,6 @@
 
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -24,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.mazimia.mobile.nurselectureroom.CustomRecyclerView
-        android:id="@+id/customRecyclerView"
+        android:id="@+id/objCustomRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="428dp"
         android:layout_marginStart="8dp"
