--- a/app/src/main/res/layout/theory_question_list.xml
+++ b/app/src/main/res/layout/theory_question_list.xml
@@ -8,20 +8,27 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/title_pad"
+        app:cardBackgroundColor="@color/backgroundImg">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:paddingTop="@dimen/title_pad"
+            android:paddingBottom="@dimen/title_pad">
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/quetxtno"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:background="@color/title_bkg"
-                android:padding="@dimen/title_pad"
+                android:paddingLeft="@dimen/title_pad"
+                android:paddingTop="3dp"
+                android:paddingRight="@dimen/title_pad"
+                android:paddingBottom="3dp"
                 android:text="1"
                 android:textColor="@color/browser_actions_bg_grey"
                 android:textSize="@dimen/title_case"
@@ -30,15 +37,16 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/quetxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="What is the name of my first friend?"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView7"
+                app:layout_constraintStart_toEndOf="@+id/quetxtno"
                 app:layout_constraintTop_toTopOf="parent" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
