fix objective recyclerview adapter
 - edit questions

 - delete questions

--- a/app/src/main/res/layout/obj_question_list.xml
+++ b/app/src/main/res/layout/obj_question_list.xml
@@ -46,6 +46,7 @@
                 android:layout_marginEnd="8dp"
                 android:paddingBottom="@dimen/title_pad"
                 android:text="Did you know that birds fly?"
+                android:textColor="@color/fui_bgGitHub"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/objQueCount"
@@ -56,7 +57,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="26dp"
                 android:layout_marginEnd="8dp"
+                android:textColor="@color/fui_bgGitHub"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -69,6 +72,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:textColor="@color/fui_bgGitHub"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/checkBox" />
@@ -80,6 +84,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:textColor="@color/fui_bgGitHub"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
@@ -92,6 +97,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:checked="false"
+                android:textColor="@color/fui_bgGitHub"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/checkBox3" />
