--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -49,6 +49,7 @@ android:layout_height="match_parent">
             android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
             android:text="@string/about_text"
+            android:textColor="@color/fui_bgGitHub"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +63,7 @@ android:layout_height="match_parent">
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/mission"
+            android:textColor="@color/fui_bgGitHub"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +77,7 @@ android:layout_height="match_parent">
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:text="@string/vision"
+            android:textColor="@color/fui_bgGitHub"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
