--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:paddingLeft="@dimen/mid_size_margin"
         android:paddingRight="@dimen/mid_size_margin"
         android:text="Welcome to the study room for nurses, a central library for all your medical lectures."
+        android:textColor="@color/fui_bgGitHub"
         android:textSize="@dimen/intro_case"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
