--- a/app/src/main/res/layout/theory_question_list.xml
+++ b/app/src/main/res/layout/theory_question_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/title_pad"
@@ -29,7 +30,6 @@
                 android:paddingTop="3dp"
                 android:paddingRight="@dimen/title_pad"
                 android:paddingBottom="3dp"
-                android:text="1"
                 android:textColor="@color/browser_actions_bg_grey"
                 android:textSize="@dimen/title_case"
                 android:textStyle="bold"
@@ -43,11 +43,11 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="What is the name of my first friend?"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/quetxtno"
                 app:layout_constraintTop_toTopOf="parent" />
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
