--- a/app/src/main/res/layout/activity_lecture_list.xml
+++ b/app/src/main/res/layout/activity_lecture_list.xml
@@ -14,7 +14,7 @@
         android:background="@color/title_bkg"
         android:paddingTop="@dimen/title_pad"
         android:paddingBottom="@dimen/title_pad"
-        android:text="Choose a lecture to start study"
+        android:text="Choose A Lecture To Start Study"
         android:textAlignment="center"
         android:textColor="@color/browser_actions_bg_grey"
         android:textSize="@dimen/title_case"
