--- a/app/src/main/res/layout/activity_nurse_room.xml
+++ b/app/src/main/res/layout/activity_nurse_room.xml
@@ -27,7 +27,7 @@
         android:paddingTop="10dp"
         android:paddingRight="10dp"
         android:paddingBottom="10dp"
-        android:text="Choose a section to start your study"
+        android:text="Choose A Section To Start Your Study"
         android:textAlignment="center"
         android:textColor="@color/browser_actions_bg_grey"
         android:textSize="@dimen/title_case"
