--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -91,7 +91,7 @@
             app:layout_constraintTop_toBottomOf="@+id/nurse_avatar">
 
             <Button
-                android:id="@+id/button7"
+                android:id="@+id/highscoreBtn"
                 android:layout_width="@dimen/action_btn"
                 android:layout_height="@dimen/action_btn"
                 android:background="@drawable/common_full_open_on_phone"
