--- a/app/src/main/res/layout/fragment_lecture.xml
+++ b/app/src/main/res/layout/fragment_lecture.xml
@@ -20,6 +20,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:padding="8dp"
+                android:textColor="@color/fui_bgGitHub"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
