--- a/app/src/main/res/layout/activity_nurse_room.xml
+++ b/app/src/main/res/layout/activity_nurse_room.xml
@@ -20,14 +20,12 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/title_bkg"
-        android:paddingLeft="10dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:text="Choose A Section To Start Your Study"
+        android:paddingTop="@dimen/title_pad"
+        android:paddingBottom="@dimen/title_pad"
+        android:text="Sections"
         android:textAlignment="center"
         android:textColor="@color/browser_actions_bg_grey"
         android:textSize="@dimen/title_case"
