--- a/app/src/main/res/layout/obj_question_list.xml
+++ b/app/src/main/res/layout/obj_question_list.xml
@@ -28,7 +28,7 @@
             android:paddingBottom="5dp"
             android:text="1"
             android:textColor="@color/browser_actions_bg_grey"
-            android:textSize="18sp"
+            android:textSize="@dimen/header_case"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -40,6 +40,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="@font/amaranth"
             android:paddingBottom="@dimen/title_pad"
             android:text="Did you know that birds fly?"
             android:textColor="@color/fui_bgGitHub"
