--- a/app/src/main/res/layout/section_listview_item.xml
+++ b/app/src/main/res/layout/section_listview_item.xml
@@ -22,11 +22,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/amaranth"
+        android:paddingBottom="2dp"
         android:text="TextView"
         android:textAlignment="viewStart"
         android:textColor="@color/fui_bgGitHub"
-        android:textSize="@dimen/title_case"
+        android:textSize="@dimen/header_case"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/optionImgBtn"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
@@ -47,10 +48,11 @@
     <ImageButton
         android:id="@+id/optionImgBtn"
         android:layout_width="31dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="4dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
         android:background="@color/fui_bgGoogle"
+        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/circled_menu_48" />
