--- a/app/src/main/res/layout/theory_question_list.xml
+++ b/app/src/main/res/layout/theory_question_list.xml
@@ -31,7 +31,7 @@
                 android:paddingRight="@dimen/title_pad"
                 android:paddingBottom="3dp"
                 android:textColor="@color/browser_actions_bg_grey"
-                android:textSize="@dimen/title_case"
+                android:textSize="@dimen/header_case"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +43,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
+                android:fontFamily="@font/amaranth"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/quetxtno"
