Fix welcome screen error during app startup
 - Add app exit functionality also

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -34,6 +34,7 @@
             android:layout_height="@dimen/avatar_size"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/welcome_textview">
@@ -60,8 +61,10 @@
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
             android:layout_marginStart="32dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toStartOf="@+id/cardView2"
             app:layout_constraintStart_toStartOf="parent"
@@ -83,8 +86,10 @@
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
             android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             app:cardCornerRadius="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/cardView"
@@ -106,8 +111,10 @@
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
             android:layout_marginStart="32dp"
+            android:layout_marginLeft="32dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -132,8 +139,10 @@
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
             android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             android:layout_marginBottom="16dp"
             app:cardCornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
