--- a/app/src/main/res/layout/theory_question_list.xml
+++ b/app/src/main/res/layout/theory_question_list.xml
@@ -7,13 +7,13 @@
     android:layout_marginBottom="@dimen/title_pad"
     android:paddingBottom="@dimen/title_pad">
 
-    <android.support.v7.widget.CardView
+    <androidx.appcompat.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/title_pad"
         app:cardBackgroundColor="@color/backgroundImg">
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/title_pad"
@@ -49,6 +49,6 @@
                 app:layout_constraintStart_toEndOf="@+id/quetxtno"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.CardView>
 </FrameLayout>
