--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -56,7 +56,7 @@
                 app:civ_border_width="2dp" />
         </FrameLayout>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
@@ -79,9 +79,9 @@
                 android:paddingTop="@dimen/btn_padding_top"
                 android:text="@string/Studies"
                 android:textColor="@color/colorPrimary" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
@@ -104,9 +104,9 @@
                 android:paddingTop="@dimen/btn_padding_top"
                 android:text="@string/Highscore"
                 android:textColor="@color/colorPrimary" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cardView4"
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
@@ -132,9 +132,9 @@
                 android:paddingTop="@dimen/btn_padding_top"
                 android:text="@string/Feedback"
                 android:textColor="@color/colorPrimary" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:id="@+id/cardView3"
             android:layout_width="@dimen/action_btn"
             android:layout_height="@dimen/action_btn"
@@ -159,7 +159,7 @@
                 android:paddingTop="@dimen/btn_padding_top"
                 android:text="@string/About"
                 android:textColor="@color/colorPrimary" />
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
