--- a/app/src/main/res/layout/theory_question_list.xml
+++ b/app/src/main/res/layout/theory_question_list.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="@dimen/title_pad"
     android:paddingBottom="@dimen/title_pad">
 
-    <androidx.appcompat.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/title_pad"
@@ -50,5 +50,5 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.appcompat.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </FrameLayout>
